@@ -131,6 +131,9 @@ namespace gui
 		//! Sets whether to draw the background
 		virtual void setDrawBackground(bool draw) _IRR_OVERRIDE_;
 
+		//! Access the vertical scrollbar
+		virtual IGUIScrollBar* getVerticalScrollBar() const _IRR_OVERRIDE_;
+
 	private:
 
 		struct ListItem
